--- a/index.html
+++ b/index.html
@@ -9,12 +9,13 @@
     <link rel="stylesheet" href="./styles/main.css">
 </head>
 <body>
-    <div class="row">
-        <div class="col-md-2"></div>
-        <div class="col-md-8"><h1>Pet Adoption Agency</h1></div>
-        <div class="col-md-2"></div>
-    </div>
-    <div class="row">
+    <div class="container-fluid">
+        <div class="row space">
+            <div class="col-md-2"></div>
+            <div class="col-md-8"><h1 class="text-center">Pet Adoption Agency</h1></div>
+            <div class="col-md-2"></div>
+        </div>
+    <div class="row space">
         <div class="col-md-3"></div>
         <div class="col-md-6">
             <div class="row">
@@ -24,9 +25,11 @@
                 <div class="col-md-3"><button id="dino" class="btn btn-default" type="submit">Dino</button></div>
             </div>
         </div>
-        <div class="row" id="main">
-
-        </div>
+        <div class="col-md-3"></div>
+    </div>
+    <div class="row">
+        <div class="col-md-12" id="main"></div>
+    </div>
     </div>
     <script
   src="https://code.jquery.com/jquery-3.3.1.min.js"
